[package]
name = "tyl-pubsub-port"
version = "0.1.0"
edition = "2021"
authors = ["TYL Framework Team"]
license = "AGPL-3.0"
repository = "https://github.com/the-yaml-life/tyl-pubsub-port"
description = "Event-driven PubSub port for TYL Framework with future-proof signatures"
homepage = "https://github.com/the-yaml-life/tyl-pubsub-port"
documentation = "https://docs.rs/tyl-pubsub-port"
readme = "README.md"
keywords = ["pubsub", "event-driven", "hexagonal-architecture", "rust", "tyl-framework"]
categories = ["development-tools", "rust-patterns", "asynchronous"]

[dependencies]
# Minimal TYL dependencies to avoid circular deps
tyl-errors = { git = "https://github.com/the-yaml-life/tyl-errors.git" }

# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
fastrand = "2.0"

[dev-dependencies]
tokio-test = "0.4"